Changed /lua to allow for reloading specific states (will default to both) Changed /lua to no longer destroy and recreate the states (will just rerun all scripts instead) Updated util.TraceLine to accept a filter entity or table Updated util.TraceLine, and in turn, all other tracing functions to hit entities too! Slight code cleanup and other junk